[package]
name = "tsdb"
version = "0.1.0"
authors = ["Matej <dobrakmato@gmail.com>"]
edition = "2018"

[dependencies]
static_assertions = "1.1.0"
nano-leb128 = "0.1.0"
log = "0.4.13"
simple_logger = "1.11.0"
serde_json = "1.0.59"
serde = { version = "1.0.120", features = ['derive'] }

[dev-dependencies]
tempdir = "0.3.7"

[profile.release]
debug = true