[package]
name = "tsdb"
version = "0.1.0"
authors = ["Matej <dobrakmato@gmail.com>"]
edition = "2018"

[dependencies]
static_assertions = "1.1.0"
nano-leb128 = "0.1.0"
log = "0.4.13"
simple_logger = "1.12.0"
serde_json = "1.0.59"
serde = { version = "1.0.125", features = ['derive'] }
tokio = { version = "0.2.4", features = ['full'] }
futures = "0.3.1"

[dev-dependencies]
tempdir = "0.3.7"

[profile.release]
debug = true